[package]
name = "leaksnow"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Async Rust client for the leaks.now /api/v1 OSINT API"
license = "MIT"
repository = "https://github.com/ItsMariusBC/leaksnow-wrapper"
readme = "README.md"
keywords = ["osint", "leaks", "shodan", "intelx", "api-client"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
fastrand = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
